--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
   <title>Club de Divulgación ESFM</title>
   <!-- Agrega el enlace al archivo CSS de Tailwind CSS -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    /* CSS personalizado */
+    .text-orange-500 {
+      color: #FFA500;
+    }
+  </style>
+  <!-- Agrega el enlace al archivo CSS de Font Awesome para los íconos -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
   <!-- Encabezado -->
   <header class="bg-blue-500 py-4">
     <div class="container mx-auto px-4">
-      <h1 class="text-white text-3xl font-bold">Club de Divulgación ESFM</h1>
+      <h1 class="text-orange-500 text-3xl font-bold">Club de Divulgación ESFM</h1>
       <h2 class="text-white text-lg">No divulgamos para la banda, somos la banda divulgando</h2>
     </div>
   </header>
@@ -19,23 +27,28 @@
   <!-- Sección: Conoce el Club -->
   <section id="conoce-el-club" class="py-10">
     <div class="container mx-auto px-4">
-      <h3 class="text-2xl font-bold mb-6">Conoce el Club</h3>
-      <!-- Agrega aquí información sobre el club -->
+      <h3 class="text-orange-500 text-2xl font-bold mb-6">Conoce el Club</h3>
+      <p class="mb-6">Somos un club de divulgación científica basado en la Escuela Superior de Física y Matemáticas del IPN. Nuestros objetivos incluyen divulgar el contenido creado en la escuela, producir entrevistas con profesores, generar artículos de divulgación, crear contenido para TikTok y YouTube, y brindar información científica de calidad a través de videos. ¡Acompáñanos en esta aventura de conocimiento!</p>
     </div>
   </section>
 
   <!-- Sección: Productos y Eventos -->
   <section id="productos-eventos" class="py-10 bg-gray-100">
     <div class="container mx-auto px-4">
-      <h3 class="text-2xl font-bold mb-6">Productos y Eventos</h3>
-      <!-- Agrega aquí información sobre los productos y eventos del club -->
+      <h3 class="text-orange-500 text-2xl font-bold mb-6">Productos y Eventos</h3>
+      <ul class="list-disc pl-6">
+        <li>Entrevistas con profesores</li>
+        <li>Artículos de divulgación</li>
+        <li>TikToks de divulgación</li>
+        <li>Videos de divulgación</li>
+      </ul>
     </div>
   </section>
 
   <!-- Sección: Staff -->
   <section id="staff" class="py-10">
     <div class="container mx-auto px-4">
-      <h3 class="text-2xl font-bold mb-6">Staff</h3>
+      <h3 class="text-orange-500 text-2xl font-bold mb-6">Staff</h3>
       <ul class="list-disc pl-6">
         <li>Crisel Escalante</li>
         <li>Julio Hernández</li>
@@ -47,12 +60,14 @@
   <!-- Redes Sociales -->
   <footer class="bg-gray-200 py-4">
     <div class="container mx-auto px-4">
-      <h4 class="text-lg font-bold mb-2">Síguenos en redes sociales:</h4>
+      <h4 class="text-orange-500 text-lg font-bold mb-2">Síguenos en redes sociales:</h4>
       <ul class="flex space-x-4">
-        <li><a href="https://www.youtube.com/clubdivulgacionesfm" target="_blank" class="text-blue-500">YouTube</a></li>
-        <li><a href="https://www.instagram.com/clubdivulgacionesfm" target="_blank" class="text-blue-500">Instagram</a></li>
-        <li><a href="https://www.tiktok.com/@clubdivulgacionesfm" target="_blank" class="text-blue-500">TikTok</a></li>
-      </ul>
+        <li><a href="https://www.youtube.com/clubdivulgacionesfm" target="_blank" class="text-blue-500"><i class="fab fa-youtube"></i> YouTube</a></li>
+        <!-- Agrega los enlaces a las otras redes sociales -->
+        <li><a href="https://www.instagram.com/clubdivulgacionesfm" target="_blank" class="text-pink-500"><i class="fab fa-instagram"></i> Instagram</a></li>
+        <li><a href="https://www.tiktok.com/@clubdivulgacionesfm" target="_blank" class="text-black"><i class="fab fa-tiktok"></i> TikTok</a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=100084614569780" target="_blank" class="text-blue-500"><i class="fab fa-facebook"></i>Facebook</a></li>
+    </ul>
     </div>
   </footer>
 </body>
