--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
     <div class="container mx-auto px-4">
       <h4 class="text-orange-500 text-lg font-bold mb-2">Síguenos en redes sociales:</h4>
       <ul class="flex space-x-4">
-        <li><a href="https://www.youtube.com/clubdivulgacionesfm" target="_blank" class="text-blue-500"><i class="fab fa-youtube"></i> YouTube</a></li>
+        <li><a href="https://www.youtube.com/channel/UCzrds4lsUnmh6LZDkFEbBEA" target="_blank" class="text-blue-500"><i class="fab fa-youtube"></i> YouTube</a></li>
         <!-- Agrega los enlaces a las otras redes sociales -->
-        <li><a href="https://www.instagram.com/clubdivulgacionesfm" target="_blank" class="text-pink-500"><i class="fab fa-instagram"></i> Instagram</a></li>
-        <li><a href="https://www.tiktok.com/@clubdivulgacionesfm" target="_blank" class="text-black"><i class="fab fa-tiktok"></i> TikTok</a></li>
-        <li><a href="https://www.facebook.com/profile.php?id=100084614569780" target="_blank" class="text-blue-500"><i class="fab fa-facebook"></i>Facebook</a></li>
+        <li><a href="https://www.instagram.com/cddesfm" target="_blank" class="text-pink-500"><i class="fab fa-instagram"></i> Instagram</a></li>
+        <li><a href="https://www.tiktok.com/@cddesfm" target="_blank" class="text-black"><i class="fab fa-tiktok"></i> TikTok</a></li>
+        <li><a href="https://web.facebook.com/profile.php?id=100084614569780&_rdc=1&_rdr" target="_blank" class="text-blue-500"><i class="fab fa-facebook"></i>Facebook</a></li>
     </ul>
     </div>
   </footer>
