--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Club de Divulgación ESFM</title>
+  
+  
   <!-- Agrega el enlace al archivo CSS de Tailwind CSS -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
@@ -11,12 +13,20 @@
     .text-orange-500 {
       color: #FFA500;
     }
+    .img-container {
+        text-align: center;
+      }
   </style>
   <!-- Agrega el enlace al archivo CSS de Font Awesome para los íconos -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
   <!-- Encabezado -->
+
+  <div class="img-container">
+    <img src="https://i.ibb.co/Zfkh2FQ/Logo-Largo.png" alt="Logo-Largo" border="0" text-align: center;>
+  </div>
+
   <header class="bg-blue-500 py-4">
     <div class="container mx-auto px-4">
       <h1 class="text-orange-500 text-3xl font-bold">Club de Divulgación ESFM</h1>
@@ -62,11 +72,11 @@
     <div class="container mx-auto px-4">
       <h4 class="text-orange-500 text-lg font-bold mb-2">Síguenos en redes sociales:</h4>
       <ul class="flex space-x-4">
-        <li><a href="https://www.youtube.com/channel/UCzrds4lsUnmh6LZDkFEbBEA" target="_blank" class="text-blue-500"><i class="fab fa-youtube"></i> YouTube</a></li>
+        <li><a href="https://www.youtube.com/clubdivulgacionesfm" target="_blank" class="text-blue-500"><i class="fab fa-youtube"></i> YouTube</a></li>
         <!-- Agrega los enlaces a las otras redes sociales -->
-        <li><a href="https://www.instagram.com/cddesfm" target="_blank" class="text-pink-500"><i class="fab fa-instagram"></i> Instagram</a></li>
-        <li><a href="https://www.tiktok.com/@cddesfm" target="_blank" class="text-black"><i class="fab fa-tiktok"></i> TikTok</a></li>
-        <li><a href="https://web.facebook.com/profile.php?id=100084614569780&_rdc=1&_rdr" target="_blank" class="text-blue-500"><i class="fab fa-facebook"></i>Facebook</a></li>
+        <li><a href="https://www.instagram.com/clubdivulgacionesfm" target="_blank" class="text-pink-500"><i class="fab fa-instagram"></i> Instagram</a></li>
+        <li><a href="https://www.tiktok.com/@clubdivulgacionesfm" target="_blank" class="text-black"><i class="fab fa-tiktok"></i> TikTok</a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=100084614569780" target="_blank" class="text-blue-500"><i class="fab fa-facebook"></i>Facebook</a></li>
     </ul>
     </div>
   </footer>
