--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <body>
   <!-- Encabezado -->
 
-  <div class="img-container">
-    <img src="https://i.ibb.co/Zfkh2FQ/Logo-Largo.png" alt="Logo-Largo" border="0" text-align: center;>
+  <div class="w-screen">
+    <img src="https://i.ibb.co/Zfkh2FQ/Logo-Largo.png" alt="Logo-Largo" class="mx-auto">
   </div>
 
   <header class="bg-blue-500 py-4">
@@ -72,11 +72,11 @@
     <div class="container mx-auto px-4">
       <h4 class="text-orange-500 text-lg font-bold mb-2">Síguenos en redes sociales:</h4>
       <ul class="flex space-x-4">
-        <li><a href="https://www.youtube.com/clubdivulgacionesfm" target="_blank" class="text-blue-500"><i class="fab fa-youtube"></i> YouTube</a></li>
+        <li><a href="https://www.youtube.com/channel/UCzrds4lsUnmh6LZDkFEbBEA" target="_blank" class="text-blue-500"><i class="fab fa-youtube"></i> YouTube</a></li>
         <!-- Agrega los enlaces a las otras redes sociales -->
-        <li><a href="https://www.instagram.com/clubdivulgacionesfm" target="_blank" class="text-pink-500"><i class="fab fa-instagram"></i> Instagram</a></li>
-        <li><a href="https://www.tiktok.com/@clubdivulgacionesfm" target="_blank" class="text-black"><i class="fab fa-tiktok"></i> TikTok</a></li>
-        <li><a href="https://www.facebook.com/profile.php?id=100084614569780" target="_blank" class="text-blue-500"><i class="fab fa-facebook"></i>Facebook</a></li>
+        <li><a href="https://www.instagram.com/cddesfm/" target="_blank" class="text-pink-500"><i class="fab fa-instagram"></i> Instagram</a></li>
+        <li><a href="https://www.tiktok.com/@cddesfm" target="_blank" class="text-black"><i class="fab fa-tiktok"></i> TikTok</a></li>
+        <li><a href="https://web.facebook.com/profile.php?id=100084614569780" target="_blank" class="text-blue-500"><i class="fab fa-facebook"></i>Facebook</a></li>
     </ul>
     </div>
   </footer>
